# DECAT_Space2Stats

./: .buildinfo  .gitignore  .mcp.json  .pre-commit-config.yaml  Makefile  README.html  README.md  docker-compose.yaml  genindex.html  index.html  objects.inv  requirements-dev.txt  search.html  searchindex.js
.pytest_cache/: README.html
_sources/: README.md
_static/: mycss.css
api/: modules.rst  space2stats.api.rst  space2stats.rst  space2stats_ingest.rst  tests.rst
config/: chirps_rainfall_ratioanomaly.json  era5land-heatwaves.json  era5land-pressure.json  era5land-solar-radiation.json  ibtracs_cyclone.json  iso3.json  myd13q1_gee.json  myd13q1_usgs.json  terraclimate_q.json  terraclimate_soil.json  terraclimate_tmin.json  terraclimate_vap.json  terraclimate_vpd.json
dev-db/: Dockerfile  Makefile  README.md  create_sample_parquets.ipynb  docker-compose.yaml  pgadmin-servers.json  seed_sample_data.py  space2stats_sample_cs_schema.csv
docs/: Introduction.html  Introduction.md  _config.yml  _toc.yml  annexA.html  annexA.md  api.html  api.rst  conf.py  deploy_api.md  pythonclient.rst  readme.html  readme.md  requirements.txt  statstable.rst  temp.md  why_hexagons.md
duckdb/: initialize.py
notebooks/: Evaluate_Hex_Zonal_Effect.ipynb  H3_Generate_AWS.ipynb  H3_Generate_AWS_OLD.ipynb  INGESTION_SCHEMA.ipynb  Untitled.ipynb  (+18 more)
postgres/: chunk_parquet.py  deploy.md  download_parquet.sh  load_nyc_sample.sh  load_parquet_chunks.sh  load_to_prod.sh  nyc_sample.py  pyproject.toml  requirements.txt
postgres/space2stats_ingest/: main.py
space2stats_api/src/: README.md  pyproject.toml  requirements.txt
space2stats_api/src/.pytest_cache/: README.html
space2stats_api/src/app/: main.py  settings.py
space2stats_api/src/app/routers/: api.py
space2stats_api/src/app/utils/: db_utils.py  h3_utils.py
space2stats_api/src/space2stats/: __init__.py  __main__.py  app.py  db.py  errors.py  h3_utils.py  handler.py  lib.py  main.py  model_types.py  settings.py  types.py
space2stats_api/src/space2stats/api/: app.py  db.py  errors.py  handler.py  schemas.py  settings.py
space2stats_api/src/space2stats_ingest/: cli.py  main.py
space2stats_api/src/space2stats_ingest/METADATA/: README.md  Space2Stats Metadata Content Landslide.xlsx  Space2Stats Metadata Content.xlsx  create_stac.py  generate_test_data.py  get_types.py  link_new_item.py  metadata.ipynb  types.json
space2stats_api/src/space2stats_ingest/METADATA/metadata_content/: Space2Stats_Metadata_DDH_Dataset.csv  Space2Stats_Metadata_Feature_Catalog.csv  Space2Stats_Metadata_NADA.csv  Space2Stats_Metadata_Sources.csv
space2stats_api/src/space2stats_ingest/METADATA/stac/: catalog.json  collection.json
space2stats_api/src/space2stats_ingest/METADATA/stac/items/: space2stats_population_2020.json
space2stats_api/src/space2stats_ingest/METADATA/stac/items_temp/space2stats-collection/space2stats_population_2020/: space2stats_population_2020.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats/: sources.json  space2stats.json  space2stats_population_2020.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/: collection.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/builtarea_ghsl/: builtarea_ghsl.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/climate/: climate.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/cyclones/: cyclones.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/drought/: drought.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/fires/: fires.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/flood-exposure-15cm-1in100/: flood-exposure-15cm-1in100.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/flood_exposure_15cm_1in100/: flood_exposure_15cm_1in100.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/landslide_susceptibility/: landslide_susceptibility.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/nighttime_lights/: nighttime_lights.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/nighttime_lights_2013/: nighttime_lights_2013.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/population-2020/: population-2020.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/space2stats_ntl_2013/: space2stats_ntl_2013.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/space2stats_population_2020/: space2stats_population_2020.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/urbanization_ghssmod/: urbanization_ghssmod.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats-collection/world_pop/: world_pop.json
space2stats_api/src/space2stats_ingest/METADATA/stac/space2stats/space2stats_population_2020/: space2stats_population_2020.json  space2stats_reupload_test.json
space2stats_api/src/space2stats_ingest/METADATA/tests/: test_stack_columns.py
space2stats_api/src/tests/: conftest.py  test_api.py  test_benchmark.py  test_errors.py  test_h3_utils.py  test_ingest.py  test_ingest_cli.py  test_metadata.py  test_module.py
space2stats_api/src/tests/metadata_tests/: test_stac_columns.py
space2stats_client/: CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
space2stats_client/src/space2stats_client/: __init__.py  client.py  ddh_datasets.json  utils.py  widgets.py
space2stats_client/src/space2stats_client/widgets/: __init__.py  aoi_selector.py  cross_section_field_selector.py  time_series_field_selector.py
space2stats_client/tests/: conftest.py  test_client.py
space2stats_client/tests/widgets/: test_aoi_selector.py  test_cross_section_field_selector.py  test_time_series_field_selector.py
space2stats_mcp/: README.md  pyproject.toml
space2stats_mcp/src/space2stats_mcp/: server.py
(+276 files in other folders)
