[tool.poetry]
name = "space2stats-ingest"
version = "0.1.0"
description = "CLI for loading parquet to DB"
authors = ["Zac Deziel <zac@developmentseed.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.5"
boto3 = "^1.35.25"
pyarrow = "^17.0.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
