[tool.poetry]
name = "space2stats"
version = "0.1.0"  # Set your version explicitly here
description = "Space 2 Stats"
authors = ["Zac Deziel <zac@developmentseed.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
orjson = "*"
fastapi = ">=0.112.0"
pandas = "*"
shapely = "*"
h3 = "*"
psycopg = { version = "*", extras = ["binary", "pool"] }
httpx = "*"
geojson-pydantic = "*"
pydantic-settings = ">=2.0.0"
typing_extensions = "*"
starlette-cramjam = ">=0.3,<0.4"
mangum = "*"
asgi-s3-response-middleware = "^0.0.2"
boto3 = "^1.35.11"

[tool.poetry.group.lambda.dependencies]
mangum = "*"

[tool.poetry.group.server.dependencies]
uvicorn = "*"

[tool.poetry.group.test.dependencies]
pre-commit = "*"
pytest = "*" 
pytest-cov = "*" 
pytest-postgresql = "*"
moto = "^5.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"