[tool.poetry]
name = "space2stats"
version = "0.1.0"  
description = "Tools for setting up and accessing the Space2Stats project's data."
authors = ["Zac Deziel <zac@developmentseed.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
orjson = "*"
fastapi = ">=0.112.0"
pandas = "*" 
shapely = "*"
h3 = "*"
psycopg = { version = "*", extras = ["binary", "pool"] }
httpx = "*"
geojson-pydantic = "*"
pydantic-settings = ">=2.0.0"
typing_extensions = "*"
starlette-cramjam = ">=0.3,<0.4"
mangum = "*"
asgi-s3-response-middleware = "^0.0.4"
boto3 = "^1.35.11"
numpy = "^2.1.1"

[tool.poetry.group.lambda.dependencies]
mangum = "*"

[tool.poetry.group.server.dependencies]
uvicorn = "*"

[tool.poetry.group.ingest.dependencies]
typer = "^0.12.5"
boto3 = "^1.35.25"
pyarrow = "^17.0.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
tqdm = "^4.66.5"

[tool.poetry.group.test.dependencies]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-postgresql = "*"
moto = "^5.0.13"
pytest-benchmark = "^4.0.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20240907"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"